--- a/theme/colours.css
+++ b/theme/colours.css
@@ -143,7 +143,7 @@ table.zebra-list tr:nth-child(even) td, ul.zebra-list li:nth-child(even) {
 }
 
 .site_logo {
-	background-image: url("./images/logo.png");
+	background-image: url("./images/E-UNI.png");
 }
 
 /* Horizontal lists
