--- a/theme/dark.css
+++ b/theme/dark.css
@@ -122,11 +122,11 @@ input#search_keywords:-moz-placeholder { /* Firefox 18- */
 
 
 /* ------- Forum & Topic Icons (Pulsing) ------- */
-dl.row-item {
+/* dl.row-item {
 	background-image: none;
-}
+} */
 
-.forums .row-item:before, .topics .row-item:before, .pmlist .row-item:before, .cplist .row-item:before {
+/* .forums .row-item:before, .topics .row-item:before, .pmlist .row-item:before, .cplist .row-item:before {
 	font-family: FontAwesome;
 	text-align: center;
 	position: absolute;
@@ -138,7 +138,7 @@ dl.row-item {
 	border-radius: 50%;
 	background: rgba(255,255,255,0.1);
 	font-size: 14px;
-}
+} */
 
 /* Spotted topics */
 .global_read_mine:after, .global_read_locked_mine:after, .global_unread_mine:after, .global_unread_locked_mine:after, .announce_read_mine:after, .announce_read_locked_mine:after, .announce_unread_mine:after, .announce_unread_locked_mine:after, .sticky_read_mine:after, .sticky_read_locked_mine:after, .sticky_unread_mine:after, .sticky_unread_locked_mine:after, .topic_read_mine:after, .topic_read_hot_mine:after, .topic_unread_mine:after, .topic_unread_hot_mine:after, .topic_read_locked_mine:after, .topic_unread_locked_mine:after {
@@ -189,7 +189,7 @@ dl.row-item {
 .forum_link:before							{content: "\f08e";}
 											/* Speech Bubble */
 .forum_read:before							{content: "\f03a";}
-.forum_read_subforum:before					{background-image: url("./images/forum_read_subforum.png");}
+.forum_read_subforum:before					{content: "\f03a";}
 .forum_unread:before						{content: "\f03a";}
 .forum_unread_subforum:before				{content: "\f03a";}
 											/* Pin */
