Added dediserve link

--- a/template/overall_footer.html
+++ b/template/overall_footer.html
@@ -57,6 +57,7 @@
 		</a>
 		<div class="alert_text"></div>
 	</div>
+	<a href="https://billing.dediserve.com/?affid=68" target="_blank"><img src="/images/dediserve_88x31.gif" height="31" width="88" alt="Powered by Dediserve" title="Powered by Dediserve"></a>
 </div>
 
 </div>
