Updated old affiliate link

--- a/template/overall_footer.html
+++ b/template/overall_footer.html
@@ -29,7 +29,7 @@
 				<span class="footer-link-text">{{ lang('TERMS_LINK') }}</span>
 			</a>
 		</p>
-		<a href="https://billing.dediserve.com/?affid=68" target="_blank"><img src="/images/dediserve_88x31.gif" height="31" width="88" alt="Powered by Dediserve" title="Powered by Dediserve"></a>
+		<a href="https://manage.dediserve.com/?affid=1131" target="_blank"><img src="/images/dediserve_88x31.gif" height="31" width="88" alt="Powered by Dediserve" title="Powered by Dediserve"></a>
 		<!-- IF DEBUG_OUTPUT -->
 		<p class="footer-row">
 			<span class="footer-info">{{ DEBUG_OUTPUT }}</span>
