--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -73,7 +73,7 @@
 <!-- EVENT overall_header_stylesheets_after -->
 
 
-
+<link rel="shortcut icon" href="https://forum.eveuniversity.org/favicon.ico" />
 
 </head>
 <body id="phpbb" class="nojs notouch section-{SCRIPT_NAME} {S_CONTENT_DIRECTION} {BODY_CLASS}">
